// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vcs/repository-files/github ListDirectory accepts a git reference 1`] = `
Ok {
  "value": Object {
    "entries": Array [
      Object {
        "name": "README.md",
        "path": "README.md",
        "rawUrl": "https://raw.githubusercontent.com/octocat/Spoon-Knife/test-branch/README.md",
        "size": 780,
        "type": "file",
      },
      Object {
        "name": "index.html",
        "path": "index.html",
        "rawUrl": "https://raw.githubusercontent.com/octocat/Spoon-Knife/test-branch/index.html",
        "size": 355,
        "type": "file",
      },
      Object {
        "name": "styles.css",
        "path": "styles.css",
        "rawUrl": "https://raw.githubusercontent.com/octocat/Spoon-Knife/test-branch/styles.css",
        "size": 256,
        "type": "file",
      },
      Object {
        "name": "test.md",
        "path": "test.md",
        "rawUrl": "https://raw.githubusercontent.com/octocat/Spoon-Knife/test-branch/test.md",
        "size": 4,
        "type": "file",
      },
    ],
  },
}
`;

exports[`vcs/repository-files/github ListDirectory errors handling fails when owner cannot be inferred from repository 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"message\\": \\"Missing owner\\",
  \\"detail\\": \\"Either specify 'owner', or include the owner in the 'repository' (e.g. 'octocat/hello-world')\\"
}
AST Path: definitions[0].statements[7]
Original Map Location: Line 22, column 3",
}
`;

exports[`vcs/repository-files/github ListDirectory errors handling fails with non-existent reference 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"message\\": \\"No commit found for the ref this-branch-does-not-exist\\",
  \\"detail\\": \\"https://docs.github.com/v3/repos/contents/\\"
}
AST Path: definitions[0].statements[8].responseHandlers[1].statements[0]
Original Map Location: Line 52, column 7",
}
`;

exports[`vcs/repository-files/github ListDirectory errors handling fails with non-existent repository 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"message\\": \\"Not Found\\",
  \\"detail\\": \\"https://docs.github.com/rest/reference/repos#get-repository-content\\"
}
AST Path: definitions[0].statements[8].responseHandlers[1].statements[0]
Original Map Location: Line 52, column 7",
}
`;

exports[`vcs/repository-files/github ListDirectory lists a single file inside entries 1`] = `
Ok {
  "value": Object {
    "entries": Array [
      Object {
        "name": "README",
        "path": "README",
        "rawUrl": "https://raw.githubusercontent.com/octocat/Hello-World/master/README",
        "size": 13,
        "type": "file",
      },
    ],
  },
}
`;

exports[`vcs/repository-files/github ListDirectory lists files without path and reference 1`] = `
Ok {
  "value": Object {
    "entries": Array [
      Object {
        "name": "README",
        "path": "README",
        "rawUrl": "https://raw.githubusercontent.com/octocat/Hello-World/master/README",
        "size": 13,
        "type": "file",
      },
    ],
  },
}
`;
